--- a/.github/dependabot.yml
+++ b/.github/dependabot.yml
@@ -5,4 +5,24 @@ updates:
     schedule:
         interval: "daily"
     directory: /
-    
+    target-branch: "main"
+  - package-ecosystem: gitsubmodule
+    schedule:
+        interval: "daily"
+    directory: /
+    target-branch: "1.2"
+  - package-ecosystem: gitsubmodule
+    schedule:
+        interval: "daily"
+    directory: /
+    target-branch: "1.3"
+  - package-ecosystem: gitsubmodule
+    schedule:
+        interval: "daily"
+    directory: /
+    target-branch: "1.4"
+  - package-ecosystem: gitsubmodule
+    schedule:
+        interval: "daily"
+    directory: /
+    target-branch: "1.5"
